# Discourse2Jira

./: .gitignore  README  README.md  dsc2jira.py  example_config.json  main.py  pyproject.toml  snapcraft.yaml
