# From https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["dsc2jira.py"]

[project]
name = "Discourse2Jira"
version = "0.1"
dependencies = [
    "jira==3.8.0",
]
requires-python = ">=3.8"
